# hanzi-decomp

./: LICENSE  flake.nix  hanzi-decomp.cabal
exe/: Main.hs
exe/HanziDecomp/: Convex.hs  HanziWriterData.hs  Maths.hs  SmallestCircle.hs
